--- a/txt/7-evaluation.tex
+++ b/txt/7-evaluation.tex
@@ -247,7 +247,7 @@ In those cases no visual feedback is necessary.
 Experiments with the packages show that this threshold is reached in Typescript if encrypting the log for about $330$ users.
 The Python implementation reaches the boundary if data is encrypted for $170$ users.
 In Go, the encryption for $1500$ recipients takes on average slightly more than $100ms$.
-This shows that a data owner can share his logs with up to 170 users without noticing a computation delay during encryption.
+This shows that a data owner can share a log with up to 170 users without noticing a computation delay during encryption.
 
 
 \begin{figure}[ht]
