--- a/txt/2-terms-and-defintions.tex
+++ b/txt/2-terms-and-defintions.tex
@@ -153,7 +153,7 @@ The difference between the classical and current understanding of E2EE can be de
 \subsection{Adversary models}
 This section details the security guarantees E2EE can provide by considering different adversaries.
 This differentiation shows that E2EE can be motivated by different attackers.
-It lays the foundation for the attacker models employed in this thesis because it clarifies which attacker's end-to-end encrypted systems can defend against.
+It lays the foundation for the attacker models employed in this thesis because it clarifies what attacker's end-to-end encrypted systems can defend against.
 
 The above NIST definition states that E2EE protects data passing an untrusted network.
 Within the network, the communicating entities do not have any control over their data.
