--- a/txt/8-conclusion.tex
+++ b/txt/8-conclusion.tex
@@ -44,7 +44,7 @@ The bottleneck of the encryption layer occurs when multiple logs are downloaded 
 If the front-end restricts the page size of the fetched logs to $100$, the processing time in the updated toolchain has increased by $55ms$ to $298ms$.
 This indicates that the introduced overhead is kept within reasonable limits and can be handled in practice.
 
-In conclusion, the designed and implemented protocol maintains end-to-end encrypted logs which can be shared within the system.
+In conclusion, the designed and implemented protocol maintains end-to-end encrypted logs, which can be shared among users.
 This protects the confidentiality of the stored logging data.
 It also supports data owners that aim to prosecute illegal data accesses.
 
